# nf-gwas

./: main.nf  nextflow.config
.github/workflows/: ci-tests.yml  trigger_healthomics_run.yml
conf/: base.config
deploy/: params_for_healthomics.json  params_for_nextflow.json
healthomics/: create_omics_workflow.sh
healthomics/ecr_policy/: omics_ecr_repository_policy.json
healthomics/iam_role/: omics_import_policy.json  omics_import_trust_policy.json  omics_variants_policy.json  omics_variants_trust_policy.json  omics_workflow_policy.json  omics_workflow_trust_policy.json
healthomics/parameter_files/: params_1mil_additive_bothsteps.json  params_additive_chinese.json  params_additive_chinese_100phenotypes.json  params_additive_indian.json  params_additive_indian_100phenotypes.json  params_additive_malay.json  params_additive_malay_100phenotypes.json  params_additive_others.json  params_additive_others_100phenotypes.json  params_big_skip_preds_0.json  params_big_skip_preds_1.json  params_big_skip_preds_2.json  params_big_skip_preds_3.json  params_big_skip_preds_4.json  params_big_skip_preds_5.json  params_big_skip_preds_6.json  params_big_skip_preds_7.json  (+10 more)
healthomics/python_helpers/: .gitignore  2567603_timeline.csv  2567603_timeline.html  compute_pricing_example.sh  draw_timeline_example.sh  make_fake_data.ipynb  make_fake_data_ethnicity.ipynb  pyproject.toml
lib/: WorkflowMain.groovy
pheweb/: .gitignore  example_config.py  example_pheno-list.json
workflows/: gene_based_tests.nf  nf_gwas.nf  quality_control.nf  single_variant_tests.nf
(+16 files in other folders)
